--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-videogular",
+  "name": "tb-videogular",
   "version": "4.2.0",
   "license": "MIT",
   "description": "The HTML5 video player for Angular 2 and successor to videogular2",
